# michelin-guide-restaurants-dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docker-ghcr.yml
dashboard/: caching.py  data_loader.py  data_utils.py  decorators.py  graph_utils.py  graphs.py  main.py  utils.py
dashboard/assets/css/: bootstrap.min.css  custom.css
dashboard/assets/img/logos/css/: main.css
dashboard/data/: database.py  llm.py  loader.py  utils.py
dashboard/graphs/: graphs.py  utils.py
dashboard/pages/: about.py  countries.py  geo.py  home.py  llm_analysis.py  overview.py  pricing.py  recommendations.py
notebooks/: exploration.ipynb
