[tool.poetry]
name = "michelin-guide-restaurants-dashboard"
version = "0.1.0"
description = "Dashboard for analyzing Michelin Guide Restaurants"
authors = ["Niek van Leeuwen <ik@niekvanleeuwen.nl>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.1"
pandas = "^2.2.3"
loguru = "^0.7.2"
dash-bootstrap-components = "^1.6.0"
nbformat = "^5.10.4"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
langchain-community = "^0.3.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.8"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = []

extend-select = [
    "I",  # Sort imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"